results/SVCOMP/conversational/log-StringValueOf08-2024_03_17_14_23_15.txt
public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result <==> \result.equals("2.50");
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf08.java:4: error: boolean cannot be dereferenced
    //@ ensures \result <==> \result.equals("2.50");
                                    ^
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

public class StringValueOf08 {
    //@ requires arg != null;
    //@ requires \typeof(Float.parseFloat(arg)) == \type(float);
    //@ ensures \result == (String.valueOf(Float.parseFloat(arg)).equals("2.50"));
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "argument type is not a subtype of the function's argument type:
  argument:  _JML__tmp208
  has type:  Real
  not subtype: REF
  in term : (jmlTypeOf (as _JML__tmp208 REF))")
1 error

